did more personification

--- a/index.html
+++ b/index.html
@@ -307,21 +307,26 @@
             <div class="single-about mb-30">
               <h6>Company Overview</h6>
               <h2 class="mb-10">We Are Interior Design</h2>
+              <h3>The Resolve Decor</h3>
               <p>
-                Lorem ipsum dolor sitametcoctr elit amet consectur aiscing elit
-                amet adipisg elit adipisg elit amet consectur orem ipsum dolor
-                sitametcoctr adipisg elit amet consectur aiscing elit adipig
-                elit amet consectur aiscing elit amet adipisg elit adipisg elit
-                amet consectur orem.
+                We are thrilled to welcome you to our website! We take immense
+                pride in offering a vast array of interior design products and
+                services to help transform your living spaces into your dream
+                abode. Our team of talented designers and decorators is
+                dedicated to providing personalized and innovative design
+                solutions that cater to your unique style and taste. From
+                furniture and lighting to artwork and accessories, we offer an
+                extensive range of products to suit every budget and preference.
               </p>
               <p>
-                Lorem ipsum dolor sitametcoctr elit amet consectur aiscing elit
-                amet adipisg elit adipisg elit amet consectur orem ipsum dolor
-                ipsum dolor sitametcoctr elit amet consectur aiscing elit amet
-                adipisg elit adipisg elit amet consectur orem ipsum dolor ipsum
-                dolor sitametcoctr elit amet consectur sitametcoctr adipisg elit
-                amet consectur aiscing elit adipig elit amet consectur aiscing
-                elit amet adipisg elit adipisg elit amet consectur orem.
+                At The Resolve, we believe that a well-designed interior can
+                have a positive impact on your mood and productivity, and we are
+                committed to helping you create a space that inspires and
+                delights you. Our website is designed to provide you with a
+                seamless and enjoyable shopping experience, with easy navigation
+                and user-friendly features. Thank you for choosing The Resolve
+                Interior Decor for your interior design needs. We look forward
+                to serving you and helping you create the home of your dreams.
               </p>
               <a
                 class="venobox btn-style-1"
@@ -1258,10 +1263,13 @@
             <div class="widget mb-50">
               <h3 class="widgettitle">About us</h3>
               <p class="mb-20 text-white">
-                Lorem ipsum dolor sitametcoctr elit amet consectur aiscing elit
-                amet amet consectur aiscing elit amet adipisg elit adipisg elit
-                amet.
+                Our team of talented designers and decorators is dedicated to
+                providing personalized and innovative design solutions that
+                cater to your unique style and taste. From furniture and
+                lighting to artwork and accessories, we offer an extensive range
+                of products to suit every budget and preference.
               </p>
+
               <div class="footer-address">
                 <div class="singllefadds">
                   <i class="fas fa-home"></i>
@@ -1340,7 +1348,8 @@
           <div class="row">
             <div class="col-lg-12 text-center">
               <p class="copyright mb-0">
-                © <span class="current-year"></span> All Rights Reserved.
+                © <span class="current-year"></span>The Resolve Decor. All
+                Rights Reserved.
               </p>
             </div>
           </div>
