updated meta name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Fiked - Interior Design Bootstrap 5 Theme</title>
+    <title>The Resolve Decor - Interior Design Bootstrap 5</title>
     <!-- favicon -->
     <link rel="icon" href="favicon.ico" />
     <!-- bootstrap core CSS -->
